<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pillpod"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.paniya.icareu.pillpod"
    android:background="#EFEFEF">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        tools:ignore="UselessParent">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/dose"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"/>
            <TextView
                android:text="@string/times"
                android:gravity="right"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"
                tools:ignore="RtlHardcoded" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/panadol"
                android:padding="3dip"
                android:textColor="#000000"/>
            <TextView
                android:text="@string/_3"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#000000"
                tools:ignore="RtlHardcoded" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
