<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_appoinments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.paniya.icareu.appoinments"
    android:background="#EFEFEF">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/physician"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"/>
            <TextView
                android:text="@string/timea"
                android:gravity="right"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"
                tools:ignore="RtlHardcoded" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/physican"
                android:padding="3dip"
                android:textColor="#000000"/>
            <TextView
                android:text="@string/time"
                android:gravity="right"
                android:padding="3dip"
                android:textColor="#000000"
                tools:ignore="RtlHardcoded" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/add"
        android:id="@+id/imageView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="274dp"
        android:layout_marginStart="274dp"
        android:onClick="onclickadd"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

</RelativeLayout>
