<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.paniya.icareu.login"
    android:background="@drawable/login">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/blogin"
        android:width="150dp"
        android:background="#4EABF9"
        android:textColor="#323232"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etuserid"
        android:background="#80FFFFFF"
        android:width="320dp"
        android:hint="@string/userid"
        tools:ignore="UnusedAttribute"
        android:layout_marginBottom="64dp"
        android:layout_above="@+id/etpassword"
        android:layout_alignLeft="@+id/etpassword"
        android:layout_alignStart="@+id/etpassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:background="#80FFFFFF"
        android:id="@+id/etpassword"
        android:width="320dp"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>